# SimuladorNV

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: Hamiltonian.hpp  Pulse.hpp  Sequence.hpp  SpinSystem.hpp  TimeEvolution.hpp
src/em_interface/: FieldLoader.hpp  GeometryParser.hpp
src/math/: BlochUtils.hpp  LinearAlgebra.hpp
src/utils/: Config.hpp  Logger.hpp
src/visualization/: BlochPlotter.hpp
